tracing/bonus_pack/manifests/applications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application
  annotations:
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
spec:
  ingressClassName: system-ingress
  rules:
  - host: application.k.erushnikov.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: application1
            port:
              number: 5000
